--- a/开发笔记.md
+++ b/开发笔记.md
@@ -10,7 +10,7 @@
 
 细细想来，Python写的爬图的代码对我来说不过是课业之余的消遣，可人家站长说不定家庭困难，全靠这个小小的网站的广告收入来养活一家人，咱们爬了图片自己欣赏欣赏也就好了，还是希望各位朋友不要去复制，传播，影响人家的生计。
 
-作为一个练手项目，基本上可以到此为止，去迎接更多更新更难的挑战了。
+作为一个Python练手项目，已经达到了最开始的目的，可以到此为止，去迎接更新更难的挑战了。
 
 别了，诸君。
 
@@ -18,19 +18,21 @@
 
 ### 吐槽站长
 
-其实我本来也不知道有这么一个网站，只是当初刚开始入门Python的时候，在CSDN和知乎上看到不少人都以它作为爬虫的实例，反正因为疫情的关系在家里待着没有事做，跟着后面学了学，上手了，觉得OK，也就写了这么一个练手的小项目。
+其实我本来也不知道有这么一个网站，只是当初刚开始入门Python的时候，在CSDN和知乎上看到不少人都以它作为爬虫的实例，跟着后面学，上手了，觉得OK，也就写了这么一个练手的小项目。
 
-随着网站在去年的易主，发现新网站的拥有者似乎挺自负，总是时不时更改一下网站的结构，给广大爱好者[挖点坑]((https://www.nange.cn/disable-devtool.html))，还写了篇[文章](https://www.nange.cn/i-killed-a-python.html)来嘲讽一下去爬图的人。
+一开始网站也简单，我的技术水平也一般，大概是去爬的人变多了，站长也是时不时更改一下网站的结构，给广大爱好者[挖点坑]((https://www.nange.cn/disable-devtool.html))，还写了篇[文章](https://www.nange.cn/i-killed-a-python.html)来嘲讽一下去爬图的人。
 
 不管是所谓的“一键禁用F12开发工具”，还是最新添加的“宝塔防火墙”自动URL跳转，不过是给大家增添了一点小小的难度，对于稍微有些上进心的同学，轻易便可寻出破解之道。
 
-虽然在这个过程中，站长的水平提高了，我们的水平也提高了，大家互相切磋学习，都拥有了一个光明的未来，可是在这个过程中，站长给他的页面上加载了十分夸张的JavaScript脚本和多得令人发指的广告，最近添加的一些脚本，更是像某些国产的流氓软件，把用户的浏览器当肉鸡一样对待，导致访问体验一落千丈。最典型，如iOS系统最新的隐私保护功能和它的某些脚本相冲突，所以一点开页面会自动关闭标签。
+道高一尺，魔高一丈，他加码一点，我们学习一点，在这个过程中，站长的水平提高了，我们的水平也提高了，更何况难度是一点点增加的，相当于是循序渐进，总能学到新的技巧应用在自己的代码中，所谓“与人斗，不亦乐乎”。
 
-如此一来，固然是挡住了某些初学者的窥探企图，可是这么做的结果是失去了来自移动端的访问流浪，可谓是把孩子和洗澡水一齐倒掉。至于某些脚本还调用了一些偏门的使用技巧，导致浏览器的内存使用惊人地暴涨，以至于我用i7的处理器加16GB内存的PC去访问，都卡得快死机了。
+在这个过程中，站长给他的页面加载了十分夸张、多得令人发指的的JavaScript脚本，性能稍低的机器打开页面就卡到飞起，仿佛让人回到了拨号上网的年代。最近添加的一些脚本，更是像某些国产的流氓软件，把用户的浏览器当肉鸡一样对待。最典型，如iOS系统最新的隐私保护功能和它的某些脚本相冲突，所以一点开页面的瞬间会自动关闭标签。如此一来，固然是挡住了某些初学者的窥探企图，可是这么做的结果是失去了来自移动端的访问流浪，可谓是把孩子和洗澡水一齐倒掉。
 
-至于文件里的各种奇奇怪怪的缺失、错误、命名的无规律，太多嘈点，根本吐槽不过来。
+还在网页中内嵌了脚本（所有的JavaScript教程都强烈不建议这么做）来调用了一些偏门的使用技巧，一旦怀疑你使用了独立窗口的浏览器开发工具就会调用JS来引导你做复杂的数学运算，导致浏览器的CPU和内存使用惊人地暴涨。
 
-哎，冤冤相报何时了，互联网这么大，能够看到也是缘分一场，虽然挡人财路如杀人父母，可是既然选择公开发布在互联网上，那还是应该多少有点互联网的分享精神才是。如果一心想要盈利，不如考虑用其它的方式来进行版权的约束。与其想着如何给来爬图的人添加困恼，制造麻烦，还不如把心思放在优化上，提升一下访问体验，开拓新的盈利渠道，或许从长远来说，会更有益吧。
+至于文件里的各种奇奇怪怪的缺失、错误、命名的无规律，改来改去的图片格式，太多嘈点，以至于根本吐槽不过来。
+
+爬图的人一般不会二次销售，想要盗图去卖的人自然挡也挡不住，与其在这方面制造麻烦，不如把心思放在运营和优化上，提升一下访问体验，从长远来说，或许会更有益吧。
 
 如站长有缘看到本文，还望其三思。
 
@@ -40,13 +42,11 @@
 
 ---
 
-**11月更新**
+**11月更新 － 最后一次更新**
 
 几个月没来，代码一跑意料之中又报错。
 
 仔细一看，网站又加了些新玩意。
-
-![你呀-总是能给我出点新花样，亮剑楚云飞魔性图片表情包.jpg](http://i2.hdslb.com/bfs/archive/a2acc460967d18b561c39390541e9fec1fa10510.jpg)
 
 用浏览器打开一看，就看到URL连着变了好几次，出来一个新URL，哦哟，啥玩意这是？
 
@@ -56,16 +56,9 @@
 
 想看看源码，刚打开开发者工具浏览器页面就没了，不得不说，这个有点吓人啊，现在你就敢关我的浏览器，下次你想干吗那真是令人想想就不寒而栗啊。
 
-这种小伎俩能难得到我们吗？上代码：
+这种小伎俩能难得到我们吗？
 
-```python
-import requests
-html = requests.get(url, headers=header)
-with open(html_rename, 'w', encoding='utf-8') as f:
-    f.write(html.text)
-```
-
-打开看到里面的代码：
+打开源码：
 
 ```html
 <html>
@@ -105,9 +98,11 @@ btwaf = tag_script.string.split("/")[-1].replace('";', '')
 header['Referer'] = btwaf_url
 ```
 
-有同学问这是怎么发现的，当然还是用浏览器开发者工具看的，不会真的以为靠那么一句JS脚本，我们就用不了开发者工具了吧，不会吧不会吧不会吧……
+有同学问这是怎么发现的，看源码呀，直接页面上按<kbd>Ctrl/Command</kbd> + <kbd>U</kbd>就可以显示源码了——
 
-既然不让用的指令是JS发出的，那把那个烦人的JS禁用掉或者删掉，不就好了？所以站长应该是被网上充斥着的“一句话教你禁用js脚本”的拙劣教程给坑了。毕竟JS也是要靠HTML来加载嘛，那么大个JS明晃晃写在html里，真的很难让人找不到啊……
+既然不让用的指令是JS发出的，那把那个烦人的JS禁用掉或者删掉（浏览器插件 Grease Monkey/Adblocker），不就好了？
+
+所以站长应该是被网上充斥着的“一句话教你禁用js脚本”的拙劣教程给坑了，毕竟JS也是要靠HTML来加载嘛……
 
 ```html
  <script async src='/cdn-cgi/challenge-platform/h/g/scripts/invisible.js'></script>
@@ -122,8 +117,8 @@ header['Referer'] = btwaf_url
 
 **7月更新**
 
-网站所托管的服务器属Cloudflare旗下，采用了一种自吹很得意的图片压缩技术，在不影响画质的情况下，抛弃了非必要的信息来缩小图片体积。
+网站所托管的服务器运营商（Cloudflare），采用了一种自吹很得意的图片压缩技术，据说可以在不影响画质的情况下，抛弃了非必要的信息来缩小图片体积。
 
-为了和这样的技术作斗争，不得已，翻越了文献资料，获取了突破缓存命中的方法。
+然而不影响画质只是让人眼看不出来差异，并非真的不影响。人家模特小姐姐精心打扮的美颜被没由来地模糊了一下，谁能不心痛？！
 
-相关详情可参看本目录下的另一篇文章。
+翻阅了文献资料，获取了突破缓存命中的方法，具体可参看本目录下的另一篇文章。
